<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="keyboard_extras_title">Extras</string>
    <string name="advanced_keyboard_settings_title">Advanced settings</string>
    <string name="adb_enable_root">Rooted debugging</string>
    <string name="adb_enable_summary_root">Allow running Android debugging as root</string>
    <string name="app_lock_title">App lock</string>
    <plurals name="app_lock_summary">
        <item quantity="one"><xliff:g example="1" id="Number of applications">%1$d</xliff:g> application is protected</item>
        <item quantity="other"><xliff:g example="10" id="Number of applications">%1$d</xliff:g> applications are protected</item>
    </plurals>
    <string name="app_lock_authentication_dialog_title">Unlock</string>
    <string name="enable_debugging">Enable debugging</string>
    <string name="disable_debugging">Disable debugging</string>
    <string name="app_lock_packages_title">Protected apps</string>
    <string name="app_lock_packages_summary">Select the apps to protect with biometrics or device credentials</string>
    <string name="app_lock_timeout_title">Auto lock timeout</string>
    <string name="app_lock_timeout_summary">Duration of time after which an unlocked app in background should be locked</string>
    <string name="app_lock_notifications_title">Redact notifications</string>
    <string name="app_lock_notifications_summary">
          Notification content will be hidden and collapsed for selected apps when they are locked.
          Heads up notifications will be automatically disabled.
    </string>
    <string name="app_lock_notifications_disabled_summary">Protect an application first</string>
    <string name="app_lock_biometrics_allowed_title">Enable biometrics for unlocking</string>
    <string name="app_lock_footer_text">Bubbles will be automatically dismissed after timeout</string>
    <string name="enable_protection">Enable protection</string>
    <string name="hide_from_launcher_title">Hide from launcher</string>
    <string name="hide_from_launcher_summary">
        Prevent this application from showing up in launcher. Requires a launcher restart for changes to take effect.
    </string>
    <string name="app_lock_timeout_5sec">5 seconds</string>
    <string name="app_lock_timeout_10sec">10 seconds</string>
    <string name="app_lock_timeout_30sec">30 seconds</string>
    <string name="app_lock_timeout_1min">1 minute</string>
    <string name="app_lock_timeout_5min">5 minutes</string>
    <string name="app_lock_timeout_10min">10 minutes</string>
    <string name="app_lock_timeout_30min">30 minutes</string>
    <string name="berry_black_theme_title">Pure black</string>
    <string name="berry_black_theme_summary">Pure black background for dark theme</string>
    <string name="reset">Reset</string>
    <string name="button_pref_title">Buttons</string>
    <string name="hardware_keys_power_key_title">Power button</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Recents button</string>
    <string name="hardware_keys_camera_key_title">Camera button</string>
    <string name="hardware_keys_volume_keys_title">Volume buttons</string>
    <string name="hardware_keys_short_press_title">Short press action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="hardware_keys_action_nothing">No action</string>
    <string name="hardware_keys_action_menu">Open/close menu</string>
    <string name="hardware_keys_action_app_switch">Recent apps switcher</string>
    <string name="hardware_keys_action_search">Search assistant</string>
    <string name="hardware_keys_action_voice_search">Voice search</string>
    <string name="hardware_keys_action_in_app_search">In-app search</string>
    <string name="hardware_keys_action_launch_camera">Launch camera</string>
    <string name="hardware_keys_action_sleep">Turn screen off</string>
    <string name="hardware_keys_action_last_app">Last app</string>
    <string name="hardware_keys_action_split_screen">Split screen</string>
    <string name="hardware_keys_action_kill_app">Kill foreground app</string>
    <string name="hardware_keys_action_volume_panel">Show Volume Panel</string>
    <string name="camera_sleep_on_release_title">Screen peek</string>
    <string name="camera_sleep_on_release_summary">A half press will keep the screen on only while the button is held down</string>
    <string name="camera_launch_title">Launch camera</string>
    <string name="camera_launch_summary">A longpress and release will launch camera</string>
    <string name="volbtn_music_controls_title">Control playback</string>
    <string name="volbtn_music_controls_summary">Seek music tracks by long pressing the volume keys while the display is off</string>
    <string name="volbtn_cursor_control_title">Keyboard cursor control</string>
    <string name="volbtn_cursor_control_off">Disabled</string>
    <string name="volbtn_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="volbtn_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="power_end_call_title">End call</string>
    <string name="power_end_call_summary">End the current call by pressing the power button</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="volume_panel_on_left_title">Show panel on left</string>
    <string name="volume_panel_on_left_summary">Display volume panel on the left side of the screen</string>
    <string name="button_wake_title">Wake device</string>
    <string name="volume_answer_call_title">Answer call</string>
    <string name="volume_answer_call_summary">Answer incoming calls by pressing the volume buttons</string>
    <string name="home_answer_call_title">Answer call</string>
    <string name="home_answer_call_summary">Answer incoming calls by pressing the home button</string>
    <string name="extras_title">Extras</string>
    <string name="additional_buttons_title">Additional buttons</string>
    <string name="click_partial_screenshot_title">Click to partial screenshot</string>
    <string name="click_partial_screenshot_summary">Short click Volume Down and Power to take partial screenshot</string>
    <string name="button_backlight_title">Backlight</string>
    <string name="button_backlight_enabled">Illuminate buttons</string>
    <string name="button_backlight_only_when_pressed_title">Illuminate buttons only when pressed</string>
    <string name="keyboard_backlight_enabled">Illuminate keyboard</string>
    <string name="button_backlight_seekbar_title">Button brightness</string>
    <string name="keyboard_backlight_seekbar_title">Keyboard brightness</string>
    <string name="backlight_timeout_title">Illumination timeout</string>
    <string name="backlight_timeout_unlimited">Don\'t turn off</string>
    <string name="backlight_summary_disabled">Disabled</string>
    <string name="backlight_summary_enabled_with_timeout">Enabled for <xliff:g id="timeout">%s</xliff:g></string>
    <string name="backlight_summary_enabled">Enabled</string>
    <string name="disable_navkeys_title">Enable on-screen nav bar</string>
    <string name="disable_navkeys_summary">Enable on-screen navigation bar and disable hardware buttons</string>
    <string name="swap_capacitive_keys_title">Swap capacitive buttons</string>
    <string name="swap_capacitive_keys_summary">Swap the order of recents and back buttons</string>
    <string name="navigation_bar_category">Navigation bar</string>
    <string name="navigation_bar_enable_taskbar_title">Enable taskbar</string>
    <string name="navigation_bar_invert_layout_title">Invert layout</string>
    <string name="navigation_bar_invert_layout_summary">Inverts the layout of the navigation bar and other items, such as the IME switcher</string>
    <string name="navigation_bar_left_summary">Place the navigation bar on the left side of the screen in landscape mode</string>
    <string name="navigation_bar_arrow_keys_title">Show arrow keys while typing</string>
    <string name="navigation_bar_arrow_keys_summary">Display left and right cursor buttons while typing. Overrides IME switcher.</string>
    <string name="navigation_bar_back_long_press_title">Back long press action</string>
    <string name="navigation_bar_home_long_press_title">Home long press action</string>
    <string name="navigation_bar_home_double_tap_title">Home double tap action</string>
    <string name="navigation_bar_app_switch_long_press_title">Recents long press action</string>
    <string name="navigation_bar_edge_long_swipe_title">Edge long swipe action</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_items_title">Power menu items</string>
    <string name="power_menu_screenshot_title">Screenshot</string>
    <string name="power_menu_screenshot_summary">Long-press for partial screenshot</string>
    <string name="power_menu_airplane_title">Airplane mode</string>
    <string name="power_menu_users_title">User switcher</string>
    <string name="power_menu_bug_report_title">Bug report</string>
    <string name="power_menu_bug_report_devoptions_unavailable">Bug reporting is disabled as development settings aren\'t enabled</string>
    <string name="power_menu_bug_report_unavailable_for_user">Bug reporting is disabled for non-primary users.</string>
    <string name="power_menu_emergency_title">Emergency</string>
    <string name="power_menu_devicecontrols_title">Device controls</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_system_icons_title">System icons</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
    <string name="status_bar_clock_title">Clock</string>
    <string name="status_bar_clock_show_seconds_title">Show seconds</string>
    <string name="status_bar_clock_show_seconds_summary">Show hours, minutes, and seconds</string>
    <string name="status_bar_clock_auto_hide_title">Auto hide</string>
    <string name="status_bar_clock_auto_hide_summary">Hide clock if launcher is visible</string>
    <string name="status_bar_clock_position_title">Clock position</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_battery_title">Battery indicator</string>
    <string name="battery_settings_title">Battery indicator</string>
    <string name="battery_settings_summary">Control behavior and style of the battery icon in the status bar</string>
    <string name="qs_panel_options_title">Quick settings</string>
    <string name="qs_panel_options_summary">Customize quick settings appearance</string>
    <string name="status_bar_brightness_category">Brightness</string>
    <string name="network_traffic_settings_title">Network traffic monitor</string>
    <string name="network_traffic_toggle_title">Show Network traffic</string>
    <string name="network_traffic_settings_summary">Display the current network traffic levels in the status bar</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_units_title">Traffic measurement units</string>
</resources>