<?xml version="1.0" encoding="UTF-8"?>
<!--
     SPDX-FileCopyrightText: 2014-2016 The CyanogenMod Project
     SPDX-FileCopyrightText: 2017-2018,2020-2022 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:key="status_bar_settings"
    android:title="@string/status_bar_title">

    <org.derpfest.support.preferences.SystemSettingListPreference
        android:key="qs_quick_pulldown"
        android:title="@string/status_bar_quick_qs_pulldown_title"
        android:entries="@array/status_bar_quick_qs_pulldown_entries"
        android:entryValues="@array/status_bar_quick_qs_pulldown_values"
        android:defaultValue="0" />

    <Preference
        android:fragment="com.android.settings.derpfest.statusbar.NetworkTrafficSettings"
        android:key="network_traffic_settings"
        android:title="@string/network_traffic_settings_title"
        android:summary="@string/network_traffic_settings_summary" />

    <PreferenceCategory
        android:title="@string/status_bar_icons_title">

        <Preference
            android:key="status_bar_icons"
            android:title="@string/status_bar_system_icons_title"
            android:summary="@string/status_bar_system_icons_summary">
            <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="status_bar_clock_key"
        android:title="@string/status_bar_clock_title">

        <org.derpfest.support.preferences.SystemSettingListPreference
            android:key="status_bar_clock"
            android:title="@string/status_bar_clock_position_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_clock_position_title"
            android:entries="@array/status_bar_clock_position_entries"
            android:entryValues="@array/status_bar_clock_position_values"
            android:defaultValue="0" />

        <org.derpfest.support.preferences.SecureSettingSwitchPreference
            android:key="clock_seconds"
            android:title="@string/status_bar_clock_show_seconds_title"
            android:summary="@string/status_bar_clock_show_seconds_summary"
            android:defaultValue="false" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_clock_auto_hide"
            android:title="@string/status_bar_clock_auto_hide_title"
            android:summary="@string/status_bar_clock_auto_hide_summary"
            android:defaultValue="false" />

        <org.derpfest.support.preferences.SystemSettingListPreference
            android:key="status_bar_am_pm"
            android:title="@string/status_bar_am_pm_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_am_pm_title"
            android:entries="@array/status_bar_am_pm_entries"
            android:entryValues="@array/status_bar_am_pm_values"
            android:defaultValue="2" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="status_bar_battery_key"
        android:title="@string/status_bar_battery_title">

        <Preference
            android:fragment="com.android.settings.derpfest.statusbar.BatterySettings"
            android:key="battery_settings"
            android:title="@string/battery_settings_title"
            android:summary="@string/battery_settings_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_bar_brightness_category">

        <!--
        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_brightness_control"
            android:title="@string/status_bar_toggle_brightness"
            android:summary="@string/status_bar_toggle_brightness_summary"
            android:defaultValue="false" />
        -->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/qs_panel_options_title">
        <Preference
            android:key="qs_panel_options"
            android:persistent="false"
            android:title="@string/qs_panel_options_title"
            android:summary="@string/qs_panel_options_summary"
            android:fragment="com.android.settings.derpfest.statusbar.QSPanelSettings" />
    </PreferenceCategory>

</PreferenceScreen>
