<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2017-2023 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/network_traffic_settings_title">

    <org.derpfest.support.preferences.SecureSettingMainSwitchPreference
        android:key="network_traffic_mode"
        android:title="@string/network_traffic_toggle_title"
        android:defaultValue="false" />

    <org.derpfest.support.preferences.SecureSettingSwitchPreference
        android:key="network_traffic_autohide"
        android:title="@string/network_traffic_autohide"
        android:summary="@string/network_traffic_autohide_summary"
        android:defaultValue="true" />

    <org.derpfest.support.preferences.SystemSettingDropDownPreference
        android:key="network_traffic_units"
        android:title="@string/network_traffic_units_title"
        android:entries="@array/network_traffic_units_entries"
        android:entryValues="@array/network_traffic_units_values"
        android:summary="%s"
        android:persistent="false" />

    <com.android.settingslib.widget.FooterPreference
        android:key="network_traffic_footer"
        android:title="@string/network_traffic_settings_summary"
        android:selectable="false" />
</PreferenceScreen>
